# training_modules

./: .env.sample_with_docker  .env.sample_without_docker  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
modules/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
modules/migrations/: 0001_initial.py  0002_module_module_user.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: activation.html  password_reset_confirm.html
